alignment problem has solved

--- a/css/style.css
+++ b/css/style.css
@@ -6,47 +6,57 @@
 
 body {
   box-sizing: border-box;
-  max-width: 800px;
-  max-height: 700px;
+  /* max-width: 800px; */
+  /* max-height: 700px; */
   font-family: Arial, Helvetica, sans-serif;
   font-size: 40px;
   text-align: center;
   background: url("https://img.freepik.com/free-vector/flat-arabic-pattern-background_79603-1826.jpg?w=1380&t=st=1679788808~exp=1679789408~hmac=b0ac574b292944fd0e9a951f7e53bc070d434c9441f0005c6af2c24c86210bca");
 }
 .container {
-  display: grid;
+  display: flex;
+  flex-direction: column;
+  /* justify-content: space-between; */
+  /* padding: 0 20%; */
+  /* width: 40vw; */
+  /* justify-content: center; */
+  align-items: center;
+  margin: 0 0 80px 0;
 }
 
 .wrapper {
-  padding: 5%;
+  padding: 20px 20px 10px 20px;
   border: 5px double #000;
-  margin: 3% 0;
-  grid-column-start: 2;
-  grid-column-end: 4;
+  margin: 10% 0 0 0;
+  /* width: 100%; */
+  /* align-items: center; */
+  /* justify-content: center; */
   font-weight: 700;
-  background-color: hsla(60, 9%, 93%, 0.856);
+  background-color: hsla(60, 9%, 93%, 0.752);
 }
 .info {
   display: flex;
-  width: 70%;
+  /* width: 70%; */
   flex-direction: row;
-  flex-wrap: wrap;
-  padding: 5% 15%;
+  /* flex-wrap: wrap; */
+  padding: 10% 15%;
+  margin: 0 15px;
   justify-content: space-between;
   align-items: center;
 }
 
 button {
-  font-size: 60px;
+  font-size: 150%;
   color: #fff;
   background-color: #000;
-  min-width: 70px;
+  width: 60px;
 }
 
 .Subhanallah,
 .Alhamdulillah,
 .Allahuakbar {
   border-bottom: 4px solid #000;
+  padding: 10px 30px 5px 30px;
 }
 
 footer {
@@ -55,7 +65,6 @@ footer {
   right: 0;
   bottom: 0;
   height: 80px;
-  text-align: center;
   background-color: hsla(60, 9%, 93%, 0.856);
   font-size: 14px;
 }
